--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,27 @@
   color: #0b223c;
 }
 
+@media (min-width: 640px) {
+  *::-webkit-scrollbar {
+    width: 9px;
+    height: 9px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #f3f3f5;
+    border-radius: 9999px;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background: #dddddd;
+    border-radius: 9999px;
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+    background: #e2e2e2;
+  }
+}
+
 .inter {
   font-family: "Inter Variable", sans-serif;
 }
@@ -18,7 +39,8 @@
 }
 
 .sombra {
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 1px 1px,
+    rgba(9, 30, 66, 0.13) 0px 0px 1px 1px;
 }
 
 .all-facturas {
@@ -30,10 +52,6 @@
 }
 
 .factura-container {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  border-radius: 10px;
-  width: 390px;
 }
 
 .factura-container .factura-line:nth-child(even) {
@@ -44,13 +62,17 @@
   background-color: #f5f5f4;
 }
 
+.factura-container .factura-line:last-child {
+  border-bottom: 1px solid #e5e7eb;
+  margin-bottom: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
 .factura-line {
   display: grid;
   grid-template-columns: repeat(5, minmax(0, 1fr));
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-top: 9px;
-  padding-bottom: 9px;
+  padding: 9px;
 }
 
 .shadowCarouselLeft {
