--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,41 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "@fontsource-variable/nunito";
 @import "@fontsource-variable/inter";
 
 :root {
-  background-color: #f5faff;
+  background-color: #fffefe;
   color: #31303e;
-}
-
-@media (min-width: 640px) {
-  *::-webkit-scrollbar {
-    width: 9px;
-    height: 9px;
-  }
-
-  *::-webkit-scrollbar-track {
-    background: #f3f3f5;
-    border-radius: 9999px;
-  }
-
-  *::-webkit-scrollbar-thumb {
-    background: #dddddd;
-    border-radius: 9999px;
-  }
-
-  *::-webkit-scrollbar-thumb:hover {
-    background: #e2e2e2;
-  }
 }
 
 .inter {
   font-family: "Inter Variable", sans-serif;
-}
-
-.nunito {
-  font-family: "Nunito Variable", sans-serif;
 }
 
 .pageSize {
@@ -51,17 +25,10 @@
   row-gap: 25px;
 }
 
-.factura-container {
-  box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
-    rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
-  box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
-    rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+.card-container {
 }
 
-.factura-container .factura-line:nth-child(even) {
-  background-color: white;
-}
-
-.factura-container .factura-line:nth-child(odd) {
-  background-color: white;
+.card-container .card-line:last-child {
+  border-bottom-right-radius: 6px;
+  border-bottom-left-radius: 6px;
 }
