--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,19 +8,6 @@
   color: #31303e;
 }
 
-.custom-scrollbar {
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-
-  /* Para navegadores basados en WebKit como Chrome, Safari */
-  &::-webkit-scrollbar {
-    display: none;
-  }
-
-  /* Ocultar el scrollbar pero permitir el scroll */
-  overflow-y: auto;
-}
-
 .fixedCenterY {
   top: 50%;
   transform: translateY(-50%);
@@ -81,4 +68,60 @@
 
 .card-container .card-line:nth-child(even) {
   background-color: #f5f9fa;
+}
+
+.swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.mySwiper {
+  height: 100%;
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  /* Width of vertical scroll bar */
+  width: 8px;
+  /* Height of horizontal scroll bar */
+  height: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: #d1d8e2;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #cbd1da;
+}
+
+.prevArrow {
+  margin-left: -25px;
+}
+
+.btnActive {
+  cursor: pointer;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.btnActive:hover {
+  opacity: 80%;
 }
