--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,8 +4,17 @@
 @import "@fontsource-variable/inter";
 
 :root {
-  background-color: #ffffff;
-  color: #31303e;
+}
+
+.inter {
+  font-family: "Inter Variable", sans-serif;
+}
+
+main {
+  background-color: white;
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
 }
 
 .fixedCenterY {
@@ -13,15 +22,9 @@
   transform: translateY(-50%);
 }
 
-@media (min-width: 640px) {
-  .fixedCenterX {
-    left: 50%;
-    transform: translateX(-50%);
-  }
-  .sombra {
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-      rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  }
+.fixedCenterX {
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .fixedCenterXnY {
@@ -30,98 +33,222 @@
   transform: translate(-50%, -50%);
 }
 
-.inter {
+.desktop {
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
   font-family: "Inter Variable", sans-serif;
 }
 
-.pageSize {
-  max-width: 1580px;
-  margin-left: auto;
-  margin-right: auto;
+.top {
+  background-color: #0069f5;
+  height: 38%;
+  /* border-bottom-right-radius: 25px; */
+  /* border-bottom-left-radius: 25px; */
 }
 
-.all-cards {
+.background-design {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  background-image: url(https://i.imgur.com/5INhM0k.png);
+}
+
+.top-content {
+  width: 95%;
+  height: 100%;
+  margin: auto;
+  color: white;
   display: flex;
-  overflow-x: auto;
-  gap: 16px;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: -5dvh;
+  font-weight: 600;
+  position: relative;
 }
 
-@media (min-width: 640px) {
-  .all-cards {
-    display: flex;
-    overflow-x: auto;
-    gap: 16px;
+.header {
+  font-size: 5dvh;
+  letter-spacing: -1px;
+}
+
+.totals-container {
+  margin-top: 2.5dvh;
+  display: flex;
+  gap: 30px;
+}
+
+.totals-title {
+  font-size: 2.5dvh;
+  opacity: 85%;
+}
+
+.totals-subtitle {
+  font-size: 3dvh;
+}
+
+.yappy-desktop {
+  position: absolute;
+  right: 0;
+  height: 6.5dvh;
+  aspect-ratio: 8/2;
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 85%;
   }
 }
 
-.card-container {
-}
-
-.card-container .card-line:last-child {
-  border-bottom-right-radius: 6px;
-  border-bottom-left-radius: 6px;
-}
-
-.card-container .card-line:nth-child(odd) {
-  background-color: white;
-}
-
-.card-container .card-line:nth-child(even) {
-  background-color: #f5f9fa;
-}
-
-.swiper-container {
-  width: 100%;
+.yappy-btn-img {
   height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(https://i.imgur.com/6hILaHB.png);
 }
 
-.swiper-slide {
+.center {
+  background-color: white;
+  height: 40%;
+  position: relative;
+}
+
+.cards-container {
+  position: absolute;
+  height: 60dvh;
+  width: 95%;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  padding: 10px;
+  overflow: auto;
+  justify-content: center;
+}
+
+.card {
+  overflow: auto;
+  height: 100%;
+  min-width: 360px;
+  width: 360px;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+@media (min-width: 640px) {
+  .card::-webkit-scrollbar {
+    width: 8px;
+    height: 10px;
+  }
+
+  .card::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background: #d1d8e2;
+  }
+
+  .card::-webkit-scrollbar-thumb:hover {
+    background: #cbd1da;
+  }
+}
+
+.bottom {
+  background-color: #0069f5;
+  height: 22%;
+  /* border-top-left-radius: 25px; */
+  /* border-top-right-radius: 25px; */
+}
+
+.mobile {
+  height: 100%;
+  width: 100%;
+  flex-direction: column;
+  font-family: "Inter Variable", sans-serif;
+}
+
+.header-mobile {
   text-align: center;
-  font-size: 18px;
-  background: #fff;
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.cards-container-mobile {
+  position: absolute;
+  height: 95%;
+  width: 100%;
+  background-color: white;
+  border-radius: 0px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-color: #e5e7eb;
+  overflow: auto;
+  justify-content: center;
+  display: flex;
+}
+
+.totals-container-mobile {
   display: flex;
   justify-content: center;
+  gap: 30px;
+  text-align: center;
+  font-weight: 600;
+}
+
+.totals-title-mobile {
+  font-size: 16px;
+}
+
+.totals-subtitle-mobile {
+  font-size: 20px;
+}
+
+.top-mobile {
+  background-color: #0069f5;
+  color: white;
+}
+
+.top-mobile .background-design {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
+.center-mobile {
+  position: relative;
+  flex: 1 1 0%;
+}
+
+.bottom-mobile {
+  background-color: #0069f5;
+  width: 100%;
+  height: 100px;
+}
+
+.bottom-mobile .background-design {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.mySwiper {
-  height: 100%;
-}
-
-.custom-scrollbar::-webkit-scrollbar {
-  /* Width of vertical scroll bar */
-  width: 8px;
-  /* Height of horizontal scroll bar */
-  height: 10px;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb {
-  border-radius: 8px;
-  background: #d1d8e2;
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #cbd1da;
-}
-
-.prevArrow {
-  margin-left: -25px;
-}
-
-.btnActive {
+.yappy-mobile {
+  height: 50px;
+  aspect-ratio: 8/2;
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
   cursor: pointer;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
 
-.btnActive:hover {
-  opacity: 80%;
+  &:hover {
+    opacity: 85%;
+  }
 }
