--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,25 +36,6 @@
   position: relative;
 }
 
-.arrow-next {
-  height: 100%;
-  width: 100%;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url(https://i.imgur.com/ej1k7dm.png);
-}
-
-.arrow-back {
-  height: 100%;
-  width: 100%;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-image: url(https://i.imgur.com/ej1k7dm.png);
-  transform: rotate(180deg);
-}
-
 .desktop {
   height: 100dvh;
   width: 100%;
@@ -62,7 +43,7 @@
 }
 
 .top {
-  height: 22%;
+  height: 18%;
   width: 100%;
   background-color: #0168f5;
   color: white;
@@ -123,7 +104,7 @@
 }
 
 .center {
-  height: 74%;
+  height: 78%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -139,12 +120,12 @@
 .slider-container {
   position: relative;
   height: 100%;
-  width: 85%;
+  width: 75%;
   overflow: hidden;
   display: flex;
   align-items: center;
   background-color: white;
-  padding: 10px;
+  padding: 0px;
   border-radius: 10px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
@@ -152,7 +133,7 @@
 
 @media (min-width: 1500px) {
   .slider-container {
-    width: 90%;
+    width: 80%;
   }
 }
 
@@ -161,16 +142,22 @@
   width: 100%;
   height: 100%;
   transition: transform 0.5s ease-in-out;
-  gap: 20px;
 }
 
 .slide {
-  width: 360px;
-  min-width: 360px;
+  width: auto;
+  min-width: 100vw;
   height: 100%;
   overflow: auto;
   display: flex;
   justify-content: center;
+}
+
+@media (min-width: 640px) {
+  .slide {
+    width: 410px;
+    min-width: 410px;
+  }
 }
 
 .slider-btn {
@@ -178,7 +165,7 @@
   top: 50%;
   transform: translateY(-50%);
   border: none;
-  width: 6dvh;
+  width: 15dvh;
   aspect-ratio: 6/10;
   cursor: pointer;
   z-index: 1000;
@@ -190,10 +177,149 @@
   }
 }
 
+.arrow-next {
+  height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(https://i.imgur.com/zokjwqf.png);
+  transform: rotate(180deg);
+}
+
+.arrow-back {
+  height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(https://i.imgur.com/zokjwqf.png);
+}
+
 .left {
-  left: 15px;
+  left: 1.4vw;
 }
 
 .right {
-  right: 15px;
+  right: 1.4vw;
+}
+
+.mobile {
+  height: 100dvh;
+  width: 100%;
+  flex-direction: column;
+  font-family: "Inter Variable", sans-serif;
+}
+
+.header-mobile {
+  text-align: center;
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.center-mobile {
+  position: relative;
+  flex: 1 1 0%;
+  display: flex;
+}
+
+.slider-container-mobile {
+  position: relative;
+  height: 98%;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  background-color: white;
+  margin: auto;
+}
+
+.totals-container-mobile {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  text-align: center;
+  font-weight: 600;
+}
+
+.totals-title-mobile {
+  font-size: 16px;
+  opacity: 85%;
+}
+
+.totals-subtitle-mobile {
+  font-size: 20px;
+}
+
+.top-mobile {
+  background-color: #0069f5;
+  color: white;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  overflow: hidden;
+}
+
+.top-mobile .background-design {
+  padding-top: 25px;
+  padding-bottom: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.bottom-mobile {
+  background-color: #0069f5;
+  width: 100%;
+  height: 100px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  overflow: hidden;
+}
+
+.bottom-mobile .background-design {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.yappy-mobile {
+  height: 50px;
+  aspect-ratio: 8/2;
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 85%;
+  }
+}
+
+.bottom-mobile .slider-btn {
+  width: 7.5dvh !important;
+}
+
+.arrow-next-mobile {
+  height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(https://i.imgur.com/ItIiJLC.png);
+  transform: rotate(180deg);
+}
+
+.arrow-back-mobile {
+  height: 100%;
+  width: 100%;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(https://i.imgur.com/ItIiJLC.png);
 }
